--- a/app/prj.conf
+++ b/app/prj.conf
@@ -4,3 +4,110 @@
 # This file contains selected Kconfig options for the application.
 
 CONFIG_SENSOR=y
+
+# General config
+
+CONFIG_ISR_STACK_SIZE=2048
+CONFIG_IDLE_STACK_SIZE=1024
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_HEAP_MEM_POOL_SIZE=16384
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000000
+
+CONFIG_THREAD_NAME=y
+CONFIG_THREAD_LOCAL_STORAGE=y
+
+CONFIG_MONGOOSE=y
+
+# Log settings
+CONFIG_PRINTK=y
+CONFIG_LOG=y
+
+# POSIX options
+CONFIG_POSIX_MAX_FDS=32
+
+# General config
+CONFIG_MINIMAL_LIBC=y
+CONFIG_MINIMAL_LIBC_RAND=y
+CONFIG_COMMON_LIBC_MALLOC_ARENA_SIZE=32768
+
+# Generic networking options
+CONFIG_NETWORKING=y
+
+# Networking config
+CONFIG_NETWORKING=y
+CONFIG_NET_IPV4=y
+CONFIG_NET_IPV6=y
+CONFIG_NET_TCP=y
+CONFIG_NET_UDP=y
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_POLL_MAX=32
+CONFIG_NET_SOCKETS_POSIX_NAMES=y
+CONFIG_NET_CONTEXT_RCVTIMEO=y
+CONFIG_NET_CONTEXT_SNDTIMEO=y
+CONFIG_NET_MAX_CONN=20
+CONFIG_NET_MAX_CONTEXTS=20
+CONFIG_NET_STATISTICS=y
+CONFIG_NET_CONNECTION_MANAGER=y
+CONFIG_NET_HOSTNAME_ENABLE=y
+CONFIG_NET_HOSTNAME_UNIQUE=y
+
+# Network buffers
+# Attention! consumed 150kb of ram
+CONFIG_NET_PKT_RX_COUNT=96
+CONFIG_NET_PKT_TX_COUNT=96
+CONFIG_NET_BUF_RX_COUNT=128
+CONFIG_NET_BUF_TX_COUNT=128
+CONFIG_NET_TX_STACK_SIZE=2048
+CONFIG_NET_RX_STACK_SIZE=2048
+CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
+CONFIG_NET_TC_TX_COUNT=1
+CONFIG_NET_TC_RX_COUNT=1
+
+CONFIG_NET_CONTEXT_NET_PKT_POOL=y
+CONFIG_NET_TCP_TIME_WAIT_DELAY=0
+CONFIG_NET_BUF_POOL_USAGE=y
+
+# Network debug config
+CONFIG_NET_LOG=n
+CONFIG_NET_SHELL=n
+
+# Kernel options
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_TEST_RANDOM_GENERATOR=y
+
+# DHCP config
+CONFIG_INIT_STACKS=y
+CONFIG_NET_LOG=y
+CONFIG_NET_ARP=y
+CONFIG_NET_DHCPV4=y
+CONFIG_NET_DHCPV4_OPTION_CALLBACKS=y
+CONFIG_NET_MGMT=y
+CONFIG_NET_MGMT_EVENT=y
+CONFIG_NET_MGMT_EVENT_INFO=y
+CONFIG_NET_MGMT_EVENT_LOG_LEVEL_DBG=n
+
+# Network address config
+CONFIG_NET_CONFIG_AUTO_INIT=y
+CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_CONFIG_NEED_IPV4=y
+# static ip configs
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="10.5.190.191"
+CONFIG_NET_CONFIG_PEER_IPV4_ADDR="10.5.190.192"
+CONFIG_NET_CONFIG_MY_IPV4_GW="10.5.190.192"
+CONFIG_NET_L2_ETHERNET=y
+
+
+# This is needed so that the sample app can respond to queries
+# as fast as possible.
+CONFIG_NET_TCP_TIME_WAIT_DELAY=0
+
+# mbedtls configs
+CONFIG_MBEDTLS=y
+CONFIG_MBEDTLS_ECDH_C=y
+CONFIG_MBEDTLS_ECDSA_C=y
+CONFIG_MBEDTLS_ECJPAKE_C=y
+CONFIG_MBEDTLS_ECP_C=y
+CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=2048
+CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED=y
+CONFIG_MBEDTLS_ECP_ALL_ENABLED=y
