--- a/app/sample.yaml
+++ b/app/sample.yaml
@@ -7,8 +7,7 @@ sample:
 common:
   build_only: true
   integration_platforms:
-    - custom_plank
-    - nucleo_f302r8
+    - stm32h747i_disco/stm32h747xx/m7
 tests:
   app.default: {}
   app.debug:
